--- a/confess.html
+++ b/confess.html
@@ -161,7 +161,7 @@
 
     // Cek apakah pesan mengandung karakter '(' atau ')'
     if (/[()]/.test(pesan)) {
-        alert('Pesan tidak boleh mengandung karakter ( atau ). Silakan hapus karakter tersebut.');
+        alert('pada kolom Isi Pesan tidak boleh mengandung tanda buka kurung atau tutup kurung (  ). Silakan hapus karakter tersebut.');
         return;
     }
 
