--- a/swapwajah.html
+++ b/swapwajah.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swap Foto</title>
+    <title>Swap Wajah</title>
     <style>
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #121212;
+            background-color: #808080;
             color: #ffffff;
             text-align: center;
             padding: 20px;
