--- a/swapwajah.html
+++ b/swapwajah.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swap Wajah</title>
     <style>
+select#photo1 {
+    background-color: #333; /* Latar belakang gelap */
+    color: #fff; /* Warna teks terang */
+    border: 2px solid #ffcc00; /* Border dengan warna kontras */
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    outline: none; /* Hilangkan outline default */
+}
+
+select#photo1:focus {
+    border-color: #00ffcc; /* Border lebih terang saat elemen difokuskan */
+}
+
+option {
+    background-color: #fff; /* Warna latar belakang opsi */
+    color: #000; /* Warna teks opsi */
+}
 
         body {
             font-family: 'Arial', sans-serif;
