--- a/swapwajah.html
+++ b/swapwajah.html
@@ -110,54 +110,94 @@ option {
         <label for="photo1">Pilih Foto Sample:</label>
         <select id="photo1" required>
             <option value="" disabled selected>Pilih disini...</option>
-            <!-- Perempuan Berjilbab -->
-    <option value="https://img3.teletype.in/files/af/1d/af1d115c-a8bd-4c1f-9279-028cac1e63f7.jpeg">Perempuan Berjilbab 1</option>
-    <option value="https://img3.teletype.in/files/25/d9/25d9e7cd-b00c-4870-a4dd-e53412353183.jpeg">Perempuan Berjilbab 2</option>
-    <option value="https://img2.teletype.in/files/5e/23/5e2306ae-0948-449c-9103-465116b45108.jpeg">Perempuan Berjilbab 3</option>
-    <option value="https://img4.teletype.in/files/bd/0a/bd0a2ff4-a558-40f9-8110-3889c9c2a2e9.jpeg">Perempuan Berjilbab 4</option>
-    <option value="https://img4.teletype.in/files/7c/4c/7c4c0ae7-23c2-4c22-ae23-043925c104e6.jpeg">Perempuan Berjilbab 5</option>
-    <option value="https://img2.teletype.in/files/d2/bf/d2bf8722-4e32-420a-ade9-d8755299735c.jpeg">Perempuan Berjilbab 6</option>
-    <option value="https://img1.teletype.in/files/86/92/86929eab-7e76-42b9-bdcf-49b2beb56a5c.jpeg">Perempuan Berjilbab 7</option>
-    <option value="https://img2.teletype.in/files/1c/a6/1ca6c4bb-e403-4f20-b72d-14d2324e09b5.jpeg">Perempuan Berjilbab 8</option>
-    <option value="https://img3.teletype.in/files/62/86/6286fa35-5cde-4b40-abe4-ce42ae91fe9b.jpeg">Perempuan Berjilbab 9</option>
-    <option value="https://img3.teletype.in/files/67/9f/679f0af1-b5b1-47f6-b412-d8e9e1112939.jpeg">Perempuan Berjilbab 10</option>
-    <option value="https://img3.teletype.in/files/22/fc/22fc5c85-922c-4d10-9c50-f950a143bc73.jpeg">Perempuan Berjilbab 11</option>
-    <option value="https://img3.teletype.in/files/6d/8d/6d8ddf3a-081b-4c30-9dc3-8b3869ceb9c1.jpeg">Perempuan Berjilbab 12</option>
-    <option value="https://img3.teletype.in/files/6d/8d/6d8ddf3a-081b-4c30-9dc3-8b3869ceb9c1.jpeg">Perempuan Berjilbab 13</option>
-    
-    <option value="https://img3.teletype.in/files/e2/fa/e2fa08fa-11c0-48f9-8aee-dbe410001865.jpeg">Remaja Pria 1</option>
-<option value="https://img1.teletype.in/files/4e/08/4e083c8f-cc93-46d5-a8e1-644b8b0450b6.jpeg">Remaja Pria 2</option>
-<option value="https://img2.teletype.in/files/d4/f0/d4f0d6e1-648b-4615-bc89-0109f81386f0.jpeg">Remaja Pria 3</option>
-<option value="https://img4.teletype.in/files/f9/18/f918184b-129b-470c-a30d-2e2fba4635be.jpeg">Remaja Pria 4</option>
-<option value="https://img4.teletype.in/files/ff/55/ff55f2c8-1392-45c7-ba5f-66a66bb917b3.jpeg">Remaja Pria 5</option>
-<option value="https://img4.teletype.in/files/30/a5/30a5a155-9ddc-44bb-9241-48aee3c90e99.jpeg">Remaja Pria 6</option>
-<option value="https://img1.teletype.in/files/8d/7a/8d7a686f-4f58-4592-b3e1-ca5df26395c0.jpeg">Remaja Pria 7</option>
-<option value="https://img4.teletype.in/files/bd/59/bd59078b-32f1-45e5-b341-13283eeb8327.jpeg">Remaja Pria 8</option>
-<option value="https://img2.teletype.in/files/50/84/508425df-e75f-452b-b2dc-fac52d57bcdf.jpeg">Remaja Pria 9</option>
-<option value="https://img4.teletype.in/files/7d/f4/7df4e644-2f56-4aed-bc4e-27193728b893.jpeg">Remaja Pria 10</option>
-<option value="https://img2.teletype.in/files/57/51/57517e0e-79e3-423d-8763-2f60566200be.jpeg">Remaja Pria 11</option>
-<option value="https://img2.teletype.in/files/9d/96/9d962b63-df6b-463d-8756-93cad759ef02.jpeg">Remaja Pria 12</option>
-<option value="https://img2.teletype.in/files/9f/6d/9f6d4588-b0c2-4611-855d-f032db881a3d.jpeg">Remaja Pria 13</option>
-<option value="https://img1.teletype.in/files/87/b4/87b4bff4-193a-4b4e-bc41-a6c93f414879.jpeg">Remaja Pria 14</option>
-<option value="https://img1.teletype.in/files/86/bc/86bc154d-7f34-42ef-9764-a1a242f9dee8.jpeg">Remaja Pria 15</option>
-<option value="https://img2.teletype.in/files/1e/77/1e77e74c-8812-4691-a6cf-6d55a1b933ef.jpeg">Remaja Pria 16</option>
-<option value="https://img1.teletype.in/files/8a/bb/8abb3a69-c553-4609-ae7b-8219b4e955f1.jpeg">Remaja Pria 17</option>
-<option value="https://img4.teletype.in/files/3f/17/3f17254f-5d03-4448-a450-fb052b1e9193.jpeg">Abdi Negara 1</option>
-<option value="https://img2.teletype.in/files/52/a3/52a3622c-7d3c-48a7-91c5-28db67873de4.jpeg">Abdi Negara 2</option>
-<option value="https://img3.teletype.in/files/63/c9/63c99f96-c31f-4c7e-aeda-30b864e1f5ad.jpeg">Abdi Negara 3</option>
-<option value="https://img4.teletype.in/files/b5/ab/b5aba09e-3a18-4cbc-b8a0-9ff22011b824.jpeg">Abdi Negara 4</option>
-<option value="https://img4.teletype.in/files/fe/48/fe48123d-29b3-4504-b181-43c40db389b7.jpeg">Abdi Negara 5</option>
-<option value="https://img2.teletype.in/files/56/08/5608c225-c9ee-442f-8137-aba3389ee0c4.jpeg">Abdi Negara 6</option>
-<option value="https://img4.teletype.in/files/f4/9e/f49e4194-85c0-4a0c-9bd0-f13781dc6e1f.jpeg">Abdi Negara 7</option>
-<option value="https://img2.teletype.in/files/da/44/da44c657-1f1c-4773-a64e-6110c4fe3db6.jpeg">Abdi Negara 8</option>
-<option value="https://img4.teletype.in/files/f6/3d/f63d4f7a-cd89-4b2d-89d2-984a90d8ae00.jpeg">Abdi Negara 9</option>
-<option value="https://img3.teletype.in/files/2f/a5/2fa59e3b-ce9a-468c-81b2-634275375dee.jpeg">Abdi Negara 10</option>
-<option value="https://img1.teletype.in/files/c0/6e/c06ec32a-f792-42ac-8a06-a085661f616b.jpeg">Abdi Negara 11</option>
-<option value="https://img2.teletype.in/files/11/9c/119cb6ca-a454-4c78-b2d9-fd994c12d0df.jpeg">Abdi Negara 12</option>
-<option value="https://img3.teletype.in/files/eb/13/eb135f21-6bc4-4990-902a-c0e6fb308dcd.jpeg">Abdi Negara 13</option>
-<option value="https://img1.teletype.in/files/4c/d6/4cd63323-468c-42c4-814a-06944f445ead.jpeg">Abdi Negara 14</option>
-<option value="https://img2.teletype.in/files/98/b1/98b1eb89-58b2-4b11-8b90-cf7633a4e31b.jpeg">Abdi Negara 15</option>
-<option value="https://img4.teletype.in/files/b0/ce/b0ce557b-2125-4673-b76e-2bd294ba072b.jpeg">Abdi Negara 16</option>
+            <option value="" disabled selected>𝙍𝙚𝙢𝙖𝙟𝙖 𝙄𝙨𝙡𝙖𝙢𝙞 𝘽𝙖𝙟𝙪 𝙋𝙪𝙩𝙞𝙝</option>
+<option value="https://i.ibb.co/sW4xC8k/IMG-20241004-104337-434.jpg">Remaja Islami Baju Putih 1</option>
+<option value="https://i.ibb.co/9qy1dzW/IMG-20241004-104108-330.jpg">Remaja Islami Baju Putih 2</option>
+<option value="https://i.ibb.co/N3g67ky/IMG-20241004-105602-460.jpg">Remaja Islami Baju Putih 3</option>
+            <option value="" disabled selected>𝙍𝙚𝙢𝙖𝙟𝙖 𝙄𝙨𝙡𝙖𝙢𝙞 𝘽𝙖𝙟𝙪 𝙋𝙪𝙩𝙞𝙝 𝘿𝙪𝙙𝙪𝙠</option>
+<option value="https://i.ibb.co/8xXpM1r/IMG-20241004-105148-549.jpg">Remaja Islami Baju Putih Duduk 1</option>
+<option value="https://i.ibb.co/1zWH0XC/IMG-20241004-105148-815.jpg">Remaja Islami Baju Putih Duduk 2</option>
+<option value="https://i.ibb.co/qdFkp0r/IMG-20241004-105149-473.jpg">Remaja Islami Baju Putih Duduk 3</option>
+            <option value="" disabled selected>𝘼𝙣𝙖𝙠 𝙆𝙚𝙘𝙞𝙡 𝙋𝙚𝙜𝙖𝙣𝙜 𝘼𝙡-𝙌𝙪𝙧'𝙖𝙣</option>
+<option value="https://i.ibb.co/BLbK3Bm/IMG-20241004-105344-578.jpg">Anak Kecil Pegang Al-Qur'an 1</option>
+<option value="https://i.ibb.co/D7WpYFd/IMG-20241004-105343-726.jpg">Anak Kecil Pegang Al-Qur'an 2</option>
+<option value="https://i.ibb.co/DWbN7nm/IMG-20241004-105343-962.jpg">Anak Kecil Pegang Al-Qur'an 3</option>
+<option value="https://i.ibb.co/LRzgBWd/IMG-20241004-105343-771.jpg">Anak Kecil Pegang Al-Qur'an 4</option>
+            <option value="" disabled selected>𝙐𝙠𝙝𝙩𝙮 𝘽𝙚𝙧𝙝𝙞𝙟𝙖𝙗</option>
+<option value="https://i.ibb.co/grDRYpc/IMG-20241004-104530-166.jpg">Ukhty Berhijab 1</option>
+<option value="https://i.ibb.co/C747M7m/IMG-20241004-104530-114.jpg">Ukhty Berhijab 2</option>
+<option value="https://i.ibb.co/F3g9DvP/IMG-20241004-104530-782.jpg">Ukhty Berhijab 3</option>
+<option value="https://i.ibb.co/1dRkr0X/IMG-20241004-104529-951.jpg">Ukhty Berhijab 4</option>
+<option value="https://i.ibb.co/1swxYLL/IMG-20241004-104530-427.jpg">Ukhty Berhijab 5</option>
+<option value="https://i.ibb.co/kq7bKPb/IMG-20241004-104530-086.jpg">Ukhty Berhijab 6</option>
+<option value="https://i.ibb.co/XygfLM4/IMG-20241004-104530-383.jpg">Ukhty Berhijab 7</option>
+<option value="https://i.ibb.co/GJ3TfCc/IMG-20241004-104530-458.jpg">Ukhty Berhijab 8</option>
+<option value="https://i.ibb.co/tYNQD5P/IMG-20241004-104530-178.jpg">Ukhty Berhijab 9</option>
+            <option value="" disabled selected>𝙐𝙠𝙝𝙩𝙮 𝘽𝙚𝙧𝙝𝙞𝙟𝙖𝙗 𝙋𝙚𝙜𝙖𝙣𝙜 𝙃𝙋</option>
+<option value="https://i.ibb.co/7NJrg0v/IMG-20241004-110307-309.jpg">Ukhty Berhijab Pegang HP 1</option>
+<option value="https://i.ibb.co/LkXxMbb/IMG-20241004-110316-112.jpg">Ukhty Berhijab Pegang HP 2</option>
+<option value="https://i.ibb.co/GpWphC4/IMG-20241004-110312-680.jpg">Ukhty Berhijab Pegang HP 3</option>
+            <option value="" disabled selected>𝙐𝙠𝙝𝙩𝙮 𝘽𝙚𝙧𝙝𝙞𝙟𝙖𝙗 𝙋𝙪𝙩𝙞𝙝</option>
+<option value="https://i.ibb.co/WBDn2WP/IMG-20241004-104900-414.jpg">Ukhty Berhijab Putih 1</option>
+<option value="https://i.ibb.co/W22KQp5/IMG-20241004-104900-999.jpg">Ukhty Berhijab Putih 2</option>
+<option value="https://i.ibb.co/dmWBy5T/IMG-20241004-104900-799.jpg">Ukhty Berhijab Putih 3</option>
+<option value="https://i.ibb.co/JHx50wB/IMG-20241004-105047-111.jpg">Ukhty Berhijab Putih 4</option>
+<option value="https://i.ibb.co/74N4nqL/IMG-20241004-105047-101.jpg">Ukhty Berhijab Putih 5</option>
+<option value="https://i.ibb.co/RN2jJ9L/IMG-20241004-105047-463.jpg">Ukhty Berhijab Putih 6</option>
+<option value="https://i.ibb.co/GxkGYn7/IMG-20241004-104946-226.jpg">Ukhty Berhijab Putih 7</option>
+<option value="https://i.ibb.co/YpsnwwJ/IMG-20241004-104946-456.jpg">Ukhty Berhijab Putih 8</option>
+<option value="https://i.ibb.co/7y6sDBZ/IMG-20241004-104945-615.jpg">Ukhty Berhijab Putih 9</option>
+<option value="https://i.ibb.co/3RQqszY/IMG-20241004-104900-196.jpg">Ukhty Berhijab Putih 10</option>
+<option value="https://i.ibb.co/Qk0BnZB/IMG-20241004-105703-791.jpg">Ukhty Berhijab Putih 11</option>
+<option value="https://i.ibb.co/n84KL0D/IMG-20241004-105601-975.jpg">Ukhty Berhijab Putih 12</option>
+            <option value="" disabled selected>𝙎𝙪𝙖𝙢𝙞 𝙄𝙨𝙩𝙧𝙞 𝘽𝙖𝙟𝙪 𝙋𝙪𝙩𝙞𝙝</option>
+<option value="https://i.ibb.co/5RhmCmW/IMG-20241004-104842-925.jpg">Suami Istri Baju Putih 1</option>
+<option value="https://i.ibb.co/cyPNLkr/IMG-20241004-104850-903.jpg">Suami Istri Baju Putih 2</option>
+<option value="https://i.ibb.co/yfRFSqB/IMG-20241004-105555-722.jpg">Suami Istri Baju Putih 3</option>
+            <option value="" disabled selected>𝙎𝙪𝙖𝙢𝙞 𝙄𝙨𝙩𝙧𝙞</option>
+<option value="https://i.ibb.co/PDVn9x6/IMG-20241004-105942-628.jpg">Suami Istri 1</option>
+<option value="https://i.ibb.co/Jj2z7Hf/IMG-20241004-105942-817.jpg">Suami Istri 2</option>
+            <option value="" disabled selected>𝙒𝙞𝙨𝙪𝙙𝙖 𝙋𝙧𝙞𝙖</option>
+<option value="https://i.ibb.co/0QPZHJW/IMG-20241004-111209-797.jpg">Wisuda Pria 1</option>
+<option value="https://i.ibb.co/RpwqmTL/IMG-20241004-111209-733.jpg">Wisuda Pria 2</option>
+<option value="https://i.ibb.co/6J7BS1G/IMG-20241004-111209-007.jpg">Wisuda Pria 3</option>
+<option value="https://i.ibb.co/VNg7Fj0/IMG-20241004-111209-568.jpg">Wisuda Pria 4</option>
+            <option value="" disabled selected>𝙋𝙤𝙡𝙞𝙨𝙞</option>
+<option value="https://i.ibb.co/FYHcqD1/IMG-20241004-105821-620.jpg">Polisi</option>
+            <option value="" disabled selected>𝙏𝙉𝙄</option>
+<option value="https://i.ibb.co/p1qp2fh/IMG-20241004-111053-316.jpg">TNI 1</option>
+<option value="https://i.ibb.co/vcPsPpR/IMG-20241004-111053-306.jpg">TNI 2</option>
+<option value="https://i.ibb.co/VvMP0W1/IMG-20241004-111053-760.jpg">TNI 3</option>
+<option value="https://i.ibb.co/d6cWCC9/IMG-20241004-111053-084.jpg">TNI 4</option>
+<option value="https://i.ibb.co/2kS7LqZ/IMG-20241004-110959-021.jpg">TNI 5</option>
+<option value="https://i.ibb.co/ypngVLJ/IMG-20241004-110958-963.jpg">TNI 6</option>
+<option value="https://i.ibb.co/zSrLWgW/IMG-20241004-110959-029.jpg">TNI 7</option>
+<option value="https://i.ibb.co/Fm8t78k/IMG-20241004-110959-043.jpg">TNI 8</option>
+            <option value="" disabled selected>𝘿𝙤𝙠𝙩𝙚𝙧 𝙋𝙧𝙞𝙖</option>
+<option value="https://i.ibb.co/NppQqtH/IMG-20241004-110130-839.jpg">Dokter Pria 1</option>
+<option value="https://i.ibb.co/k9Cb3wy/IMG-20241004-110130-476.jpg">Dokter Pria 2</option>
+<option value="https://i.ibb.co/k9sXWF1/IMG-20241004-110130-360.jpg">Dokter Pria 3</option>
+<option value="https://i.ibb.co/7KsFbrc/IMG-20241004-110130-858.jpg">Dokter Pria 4</option>
+            <option value="" disabled selected>𝘿𝙤𝙠𝙩𝙚𝙧 𝙒𝙖𝙣𝙞𝙩𝙖</option>
+<option value="https://i.ibb.co/Dpk0Sv5/IMG-20241004-110214-143.jpg">Dokter Wanita 1</option>
+<option value="https://i.ibb.co/MpDK0Z5/IMG-20241004-110213-951.jpg">Dokter Wanita 2</option>
+<option value="https://i.ibb.co/NVfMdMg/IMG-20241004-110214-323.jpg">Dokter Wanita 3</option>
+<option value="https://i.ibb.co/8jvPQ7k/IMG-20241004-110213-478.jpg">Dokter Wanita 4</option>
+            <option value="" disabled selected>𝘽𝙖𝙧𝙞𝙨𝙩𝙖 𝙒𝙖𝙣𝙞𝙩𝙖</option>
+<option value="https://i.ibb.co/gTKFYm8/IMG-20241004-110504-410.jpg">Barista Wanita 1</option>
+<option value="https://i.ibb.co/Qj5YHP1/IMG-20241004-110504-648.jpg">Barista Wanita 2</option>
+<option value="https://i.ibb.co/M1Bdvrh/IMG-20241004-110504-823.jpg">Barista Wanita 3</option>
+<option value="https://i.ibb.co/Rh3WcBZ/IMG-20241004-110504-779.jpg">Barista Wanita 4</option>
+            <option value="" disabled selected>𝙐𝙠𝙝𝙩𝙮 𝘿𝙞 𝘾𝙖𝙛𝙚</option>
+<option value="https://i.ibb.co/F0VKWkF/IMG-20241004-110622-788.jpg">Ukhty Di Cafe 1</option>
+<option value="https://i.ibb.co/3TFmF4R/IMG-20241004-110623-670.jpg">Ukhty Di Cafe 2</option>
+<option value="https://i.ibb.co/r4dYBMP/IMG-20241004-110623-514.jpg">Ukhty Di Cafe 3</option>
+<option value="https://i.ibb.co/KjMWR72/IMG-20241004-110623-759.jpg">Ukhty Di Cafe 4</option>
+            <option value="" disabled selected>𝘼𝙗𝙙𝙞 𝙉𝙚𝙜𝙖𝙧𝙖 𝘽𝙖𝙟𝙪 𝙐𝙣𝙜𝙪</option>
+<option value="https://i.ibb.co/zxmsK0X/IMG-20241004-105948-820.jpg">Abdi Negara Baju Ungu 1</option>
+<option value="https://i.ibb.co/hLjyb8K/IMG-20241004-105948-769.jpg">Abdi Negara Baju Ungu 2</option>
+<option value="https://i.ibb.co/tBvJbpG/IMG-20241004-105949-007.jpg">Abdi Negara Baju Ungu 3</option>
+<option value="https://i.ibb.co/2yq7dDN/IMG-20241004-105948-996.jpg">Abdi Negara Baju Ungu 4</option>
 
         </select>
             <p></p>
